modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: 中村・宇佐見研究室
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ 東京大学先端科学技術研究センター
+量子情報物理工学分野
+
+中村・宇佐見研究室
+
+〒153-8904
+東京都目黒区駒場4-6-1
+3号館　208・209号室
+TEL. 03-5452-5076
+info(at)qc.rcast.u-tokyo.ac.jp
+
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: qjjfermi13
+github_username:  qipe-nlab
 
 # Build settings
 theme: minima
