--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: 中村・宇佐見研究室
-email: your-email@example.com
+email: your-email@example
 description: >- # this means to ignore newlines until "baseurl:"
  東京大学先端科学技術研究センター
 量子情報物理工学分野
